--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
+.env
 node_modules
 dist
+.build
+.vercel
 .DS_Store
-server/public
-vite.config.ts.*
+Thumbs.db
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
+server/data
 *.tar.gz
