--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "tsx server/index.ts",
-    "build": "tsx scripts/build.ts",
+    "build": "vite build && tsx scripts/build.ts",
     "start": "node dist/index.cjs",
     "check": "tsc",
     "db:push": "drizzle-kit push",
