--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
     ],
     "functions": {
         "api/index.js": {
-            "includeFiles": "server/**, shared/**"
+            "includeFiles": "server/**, shared/**, dist/**"
         }
     }
 }
